# Jarvis-assistant

./: .gitignore  AUDIO_PIPELINE_README.md  JARVIS_INTEGRATION_GUIDE.md  PLAN.md  STARTUP_README.md  Start JARVIS.bat  create_jarvis_icon.py  create_shortcut.py  debug_orchestrator.py  fix_shortcut.py  install_features.py  launch_chrome_debug.ps1  main.py  migrate_print_to_logging.py  package-lock.json  pyproject.toml  research.md  setup.py  setup_startup.py  start_chrome_debug.bat  start_chrome_debug.ps1  start_mark_chrome.bat  start_mark_chrome.ps1  startup_launcher.py  test_live_api.py  test_live_orchestrator.py  ui.py
actions/: audio_action.py  browser_control.py  calendar_tool.py  claude_shell.py  claude_tool.py  cmd_control.py  code_helper.py  computer_control.py  computer_settings.py  desktop.py  dev_agent.py  email_tool.py  file_controller.py  flight_finder.py  game_updater.py  github_tool.py  home_action.py  memory_action.py  open_app.py  proactive_action.py  rag_action.py  reminder.py  screen_action.py  screen_processor.py  send_message.py  weather_report.py  web_search.py  youtube_video.py
agent/: error_handler.py  executor.py  planner.py  task_queue.py
config/sessions/: decrypted_cookies.json
config/sessions/chrome_cookies/: browser_cookies.json
config/sessions/whatsapp/: cookies.json  storage.json
core/: ambient_dashboard.py  api_key_manager.py  audio_pipeline.py  branding.py  cache.py  cinematic_intro.py  conversation_context.py  conversation_manager.py  emotion_detector.py  face_auth.py  gesture_control.py  hud.py  intro_music.py  local_llm.py  lock_monitor.py  logging_config.py  memory_bridge.py  pattern_learner.py  personality.py  plugin_manager.py  proactive_monitor.py  prompt.txt  sapi_tts.py  scheduler.py  screen_monitor.py  screen_watchdog.py  stt_engine.py  system_hud.py  system_snapshot.py  system_tray.py  tts_engine.py  vad.py  visual_presence.py  wake_word.py  welcome_briefing.py
docs/superpowers/plans/: 2026-04-10-jarvis-alive-plan.md
docs/superpowers/specs/: 2026-04-10-jarvis-alive-design.md
integrations/: __init__.py
integrations/approval/: __init__.py  tier_classifier.py  ui_integration.py  workflow.py
integrations/base/: __init__.py  adapter.py  cache.py  exceptions.py  playwright_manager.py
integrations/contacts/: __init__.py  contacts_adapter.py
integrations/core/: llm_orchestrator.py  universal_orchestrator.py
integrations/home_assistant/: home_assistant_adapter.py
integrations/outlook/: __init__.py  outlook_adapter.py  outlook_native_adapter.py
integrations/system/: scheduler_adapter.py  system_adapter.py  windows_app_adapter.py
integrations/whatsapp/: __init__.py  whatsapp_adapter.py
memory/: __init__.py  config_manager.py  extractor.py  j_memory.py  memory_manager.py  rag_pipeline.py  session_metadata.py
memory/patterns/: tool_patterns.json
memory/procedural/: skills.json
memory/sessions/: last_session.json
tests/: __init__.py  test_ambient_awareness.py  test_ambient_dashboard.py  test_continuous_conversation.py  test_conversation_context.py  test_emotion_tts.py  test_jarvis_alive_integration.py  test_jarvis_enhancement.py  test_language_detection.py  test_llm_orchestrator.py  test_memory_bridge.py  test_orchestrator.py  test_pattern_learning.py  test_pause_detection.py  test_proactive_volunteering.py  test_scheduler_adapter.py  test_session_continuity.py  test_visual_presence.py
